force-app/main/default/objects/ContractAssociation__c/ContractAssociation__c.object-meta.xml
<CustomObject>
    <label>Contract Association</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Contract Association Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>