force-app/main/default/objects/ContractAssociation__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Client</value>
        </filterItems>
        <filterItems>
            <field>$Source.Context__c</field>
            <operation>equals</operation>
            <valueField>$Source.Context__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Associations</relationshipLabel>
    <relationshipName>Contract_Library_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>