force-app/main/default/objects/ContractAssociation__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Context</label>
    <referenceTo>FIN_Context__c</referenceTo>
    <relationshipLabel>Contract Associations</relationshipLabel>
    <relationshipName>Library_Associations1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>