force-app/main/default/objects/ContractAssociation__c/fields/FIN_AXS_Event__c.field-meta.xml
<CustomField>
    <fullName>FIN_AXS_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AXS Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Context__c</field>
            <operation>equals</operation>
            <valueField>$Source.Context__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Contract Associations</relationshipLabel>
    <relationshipName>Contract_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>