force-app/main/default/objects/ContractAssociation__c/fields/FIN_ContractAssociationMatchingLevel__c.field-meta.xml
<CustomField>
    <fullName>FIN_ContractAssociationMatchingLevel__c</fullName>
    <description>Formula to detect matching condition level</description>
    <formula>IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c),!ISBLANK(FIN_Venue__c), !ISBLANK( FIN_AXS_Event__c ),!ISBLANK(FIN_Event_Zone__c)), 8,
IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c),!ISBLANK( FIN_AXS_Event__c ),!ISBLANK(FIN_Event_Zone__c)), 7,
IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c),!ISBLANK(FIN_Venue__c), !ISBLANK(FIN_Event_Zone__c)), 6,
IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c),!ISBLANK(FIN_Venue__c), !ISBLANK( FIN_AXS_Event__c ),ISBLANK(FIN_Event_Zone__c)), 5,
IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c),!ISBLANK(FIN_Event_Zone__c), ISBLANK( FIN_Venue__c ), ISBLANK( FIN_AXS_Event__c )), 4,
IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c),ISBLANK(FIN_Venue__c), !ISBLANK( FIN_AXS_Event__c ), ISBLANK(FIN_Event_Zone__c)), 3,
IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c),!ISBLANK(FIN_Venue__c), ISBLANK( FIN_AXS_Event__c ),ISBLANK(FIN_Event_Zone__c)), 2,
IF(AND (!ISBLANK( Context__c ), !ISBLANK( Client__c)), 1, 0))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract association matching level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>