force-app/main/default/objects/ContractAssociation__c/fields/FIN_Event_Zone__c.field-meta.xml
<CustomField>
    <fullName>FIN_Event_Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Zone</label>
    <referenceTo>Zone_Types__c</referenceTo>
    <relationshipLabel>Contract Associations</relationshipLabel>
    <relationshipName>Contract_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>