force-app/main/default/objects/ContractAssociation__c/fields/FIN_TF_Validation__c.field-meta.xml
<CustomField>
    <fullName>FIN_TF_Validation__c</fullName>
    <label>TF_Validation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>