force-app/main/default/objects/ContractAssociation__c/fields/FIN_Venue__c.field-meta.xml
<CustomField>
    <fullName>FIN_Venue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only select a Venue.</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Venue</value>
        </filterItems>
        <filterItems>
            <field>$Source.Context__c</field>
            <operation>equals</operation>
            <valueField>$Source.Context__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contract Associations (Venue)</relationshipLabel>
    <relationshipName>Contract_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>