force-app/main/default/objects/ContractAssociation__c/recordTypes/AXS_Event.recordType-meta.xml
<RecordType>
    <fullName>AXS_Event</fullName>
    <active>false</active>
    <label>AXS Event</label>
</RecordType>