force-app/main/default/objects/ContractAssociation__c/recordTypes/Business_Units.recordType-meta.xml
<RecordType>
    <fullName>Business_Units</fullName>
    <active>false</active>
    <label>Business Units</label>
</RecordType>