force-app/main/default/objects/ContractAssociation__c/recordTypes/Context.recordType-meta.xml
<RecordType>
    <fullName>Context</fullName>
    <active>false</active>
    <label>Context</label>
</RecordType>