force-app/main/default/objects/ContractAssociation__c/recordTypes/DELETE_Chart_of_Accounts.recordType-meta.xml
<RecordType>
    <fullName>DELETE_Chart_of_Accounts</fullName>
    <active>true</active>
    <label>Unable to Delete</label>
</RecordType>