force-app/main/default/objects/ContractAssociation__c/recordTypes/FIN_Contract_Mapping.recordType-meta.xml
<RecordType>
    <fullName>FIN_Contract_Mapping</fullName>
    <active>true</active>
    <description>Used for all Contract Mapping of Context, Venue, Client, Event, Code</description>
    <label>Contract-Mapping</label>
</RecordType>