force-app/main/default/objects/ContractAssociation__c/recordTypes/Legal_Entity.recordType-meta.xml
<RecordType>
    <fullName>Legal_Entity</fullName>
    <active>false</active>
    <label>Legal Entity</label>
</RecordType>