force-app/main/default/objects/ContractAssociation__c/recordTypes/Statistical_Chart_of_Accounts.recordType-meta.xml
<RecordType>
    <fullName>Statistical_Chart_of_Accounts</fullName>
    <active>false</active>
    <label>Statistical Chart of Accounts</label>
</RecordType>