force-app/main/default/objects/ContractAssociation__c/recordTypes/Tax_Information.recordType-meta.xml
<RecordType>
    <fullName>Tax_Information</fullName>
    <active>false</active>
    <label>Tax Information</label>
</RecordType>