force-app/main/default/objects/ContractAssociation__c/validationRules/Contract_Account_to_Match_Client_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Account_to_Match_Client_ID</fullName>
    <active>false</active>
    <errorConditionFormula>Contract__r.AccountId &lt;&gt; Client__r.Id</errorConditionFormula>
    <errorMessage>Contracts Account does not match with Client. Pls create one contract association for each Context and Client combination</errorMessage>
</ValidationRule>